# opencv-cmake-template

./: CMakeLists.txt
include/MagicIsp/: MagicIsp.h
src/: Main.cpp
src/MagicIsp/: MagicIsp.cpp
